--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="https://fonts.google.com/specimen/Raleway?selection.family=Raleway">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    
+    <title>Document</title>
 </head>
 <body>
     <header>
