--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/index.css">
 
     <title>Document</title>
@@ -14,10 +14,10 @@
 
         <header>
             <nav>
-                <a href="#">Home</a>
+                <a href="#" class="active">Home</a>
                 <a href="#">About</a>
                 <a href="#">Contact</a>
-            </nav>asdf
+            </nav>
         </header>
 <!--
         <section class="title-container">
