Add styles for cta

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
                 <a href="#">Contact</a>
             </nav>
         </header>
-<!--
-        <section class="title-container">
-            50 Influential Artists
-            Contact Us
-        </section>
 
+        <section id="cta">
+            <h2>50 Influential Artists</h2>
+            <a href="#" class="btn">Contact Us</a>
+        </section>
+<!--
         <section class="artists-container">
             <div class="artist">
                 <img src="https://images.fineartamerica.com/images/artworkimages/mediumlarge/3/starry-night-by-vincent-van-gogh-vincent-van-gogh.jpg"/>
